src/uk/ac/open/crc/nominal/rules/parser/NominalParser.java
// Generated from /home/simon/PhD/src/nominal/src/uk/ac/open/crc/nominal/rules/parser/Nominal.g4 by ANTLR 4.1

    package uk.ac.open.crc.nominal.rules.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NominalParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE_SELECTOR=1, METHOD_SELECTOR=2, REFERENCE_SELECTOR=3, LABEL_SELECTOR=4, 
		GENERIC_RULE_NAME=5, ABBREVIATION=6, ACRONYMS=7, BRANDING_LIST=8, BODY=9, 
		BRAND=10, CIPHER=11, CONTENT=12, DEFAULT=13, GLOBAL=14, PLURAL=15, FIRST_CHAR=16, 
		LENGTH_CHARACTERS=17, LENGTH_TOKEN=18, PHRASE=19, PREFIX=20, PREFIX_LIST=21, 
		SEPARATOR=22, STANDALONE_ABBREVIATION=23, TYPE_ACRONYM=24, COMPOUND_PHRASE_NAME=25, 
		PHRASE_NAME=26, SEPARATOR_CHARACTER=27, JAVA_SEPARATOR_CHARACTER=28, PRIMITIVE_TYPE=29, 
		CIPHER_LIST=30, BooleanValue=31, GRAMMATICAL_NUMBER_VALUE=32, MIXED=33, 
		LOWER=34, UPPER=35, NONE=36, COMPLEX=37, COLON=38, SEMI_COLON=39, COMMA=40, 
		UNDER_SCORE=41, DOLLAR_SIGN=42, HYPHEN=43, FULL_STOP=44, BLOCK_OPEN=45, 
		BLOCK_CLOSE=46, MULTIPLIER=47, WILDCARD=48, CipherName=49, ListIdentifier=50, 
		JavaIdentifier=51, PREFIX_VALUE=52, Number=53, WS=54, LINE_COMMENT=55;
	public static final String[] tokenNames = {
		"<INVALID>", "TYPE_SELECTOR", "METHOD_SELECTOR", "REFERENCE_SELECTOR", 
		"'label'", "GENERIC_RULE_NAME", "'standalone-abbreviation'", "'acronyms'", 
		"'branding-list'", "'body'", "'brand'", "'cipher'", "'content'", "'default'", 
		"'global'", "'plural'", "'first-char'", "'length-char'", "'length-token'", 
		"'phrase'", "'prefix'", "'prefix-list'", "'separator'", "'abbreviation'", 
		"'type-acronym'", "COMPOUND_PHRASE_NAME", "PHRASE_NAME", "SEPARATOR_CHARACTER", 
		"JAVA_SEPARATOR_CHARACTER", "PRIMITIVE_TYPE", "'cipher-list'", "BooleanValue", 
		"GRAMMATICAL_NUMBER_VALUE", "'mixed'", "'lower'", "'upper'", "'none'", 
		"'complex'", "':'", "';'", "','", "'_'", "'$'", "'-'", "'.'", "'{'", "'}'", 
		"'+'", "'*'", "CipherName", "ListIdentifier", "JavaIdentifier", "PREFIX_VALUE", 
		"Number", "WS", "LINE_COMMENT"
	};
	public static final int
		RULE_file = 0, RULE_subspeciesRule = 1, RULE_typeRule = 2, RULE_methodRule = 3, 
		RULE_referenceRule = 4, RULE_labelRule = 5, RULE_typeRuleDefinition = 6, 
		RULE_methodRuleDefinition = 7, RULE_referenceRuleDefinition = 8, RULE_labelRuleDefinition = 9, 
		RULE_typographyDefinition = 10, RULE_bodyDefinition = 11, RULE_firstCharDefinition = 12, 
		RULE_prefixDefinition = 13, RULE_separatorDefinition = 14, RULE_pluralDefinition = 15, 
		RULE_cipherDefinition = 16, RULE_lengthTokenDefinition = 17, RULE_lengthCharacterDefinition = 18, 
		RULE_typeContentDefinition = 19, RULE_methodContentDefinition = 20, RULE_referenceContentDefinition = 21, 
		RULE_labelContentDefinition = 22, RULE_typeContentSetting = 23, RULE_methodContentSetting = 24, 
		RULE_referenceContentSetting = 25, RULE_labelContentSetting = 26, RULE_bodyValue = 27, 
		RULE_firstCharValue = 28, RULE_standaloneAbbreviation = 29, RULE_typeAcronym = 30, 
		RULE_phraseValue = 31, RULE_prefixValue = 32, RULE_separatorValue = 33, 
		RULE_listDefinition = 34, RULE_cipherListDefinition = 35, RULE_cipherDeclaration = 36, 
		RULE_javaTypeName = 37, RULE_typeWildcardName = 38, RULE_classOrInterfaceType = 39, 
		RULE_prefixListDefinition = 40, RULE_prefixDeclaration = 41, RULE_brandingListDefinition = 42, 
		RULE_brandingDefinition = 43, RULE_globalRules = 44, RULE_globalRulesDefinition = 45, 
		RULE_acronymTypographyRule = 46, RULE_acronymTypography = 47;
	public static final String[] ruleNames = {
		"file", "subspeciesRule", "typeRule", "methodRule", "referenceRule", "labelRule", 
		"typeRuleDefinition", "methodRuleDefinition", "referenceRuleDefinition", 
		"labelRuleDefinition", "typographyDefinition", "bodyDefinition", "firstCharDefinition", 
		"prefixDefinition", "separatorDefinition", "pluralDefinition", "cipherDefinition", 
		"lengthTokenDefinition", "lengthCharacterDefinition", "typeContentDefinition", 
		"methodContentDefinition", "referenceContentDefinition", "labelContentDefinition", 
		"typeContentSetting", "methodContentSetting", "referenceContentSetting", 
		"labelContentSetting", "bodyValue", "firstCharValue", "standaloneAbbreviation", 
		"typeAcronym", "phraseValue", "prefixValue", "separatorValue", "listDefinition", 
		"cipherListDefinition", "cipherDeclaration", "javaTypeName", "typeWildcardName", 
		"classOrInterfaceType", "prefixListDefinition", "prefixDeclaration", "brandingListDefinition", 
		"brandingDefinition", "globalRules", "globalRulesDefinition", "acronymTypographyRule", 
		"acronymTypography"
	};

	@Override
	public String getGrammarFileName() { return "Nominal.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public NominalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public GlobalRulesContext globalRules() {
			return getRuleContext(GlobalRulesContext.class,0);
		}
		public ListDefinitionContext listDefinition() {
			return getRuleContext(ListDefinitionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NominalParser.EOF, 0); }
		public List<SubspeciesRuleContext> subspeciesRule() {
			return getRuleContexts(SubspeciesRuleContext.class);
		}
		public SubspeciesRuleContext subspeciesRule(int i) {
			return getRuleContext(SubspeciesRuleContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96); subspeciesRule();
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_SELECTOR) | (1L << METHOD_SELECTOR) | (1L << REFERENCE_SELECTOR) | (1L << LABEL_SELECTOR))) != 0) );
			setState(101); listDefinition();
			setState(102); globalRules();
			setState(103); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubspeciesRuleContext extends ParserRuleContext {
		public LabelRuleContext labelRule() {
			return getRuleContext(LabelRuleContext.class,0);
		}
		public ReferenceRuleContext referenceRule() {
			return getRuleContext(ReferenceRuleContext.class,0);
		}
		public MethodRuleContext methodRule() {
			return getRuleContext(MethodRuleContext.class,0);
		}
		public TypeRuleContext typeRule() {
			return getRuleContext(TypeRuleContext.class,0);
		}
		public SubspeciesRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subspeciesRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitSubspeciesRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubspeciesRuleContext subspeciesRule() throws RecognitionException {
		SubspeciesRuleContext _localctx = new SubspeciesRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subspeciesRule);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case TYPE_SELECTOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); typeRule();
				}
				break;
			case METHOD_SELECTOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(106); methodRule();
				}
				break;
			case REFERENCE_SELECTOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(107); referenceRule();
				}
				break;
			case LABEL_SELECTOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(108); labelRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeRuleContext extends ParserRuleContext {
		public TypeRuleDefinitionContext typeRuleDefinition(int i) {
			return getRuleContext(TypeRuleDefinitionContext.class,i);
		}
		public TerminalNode TYPE_SELECTOR() { return getToken(NominalParser.TYPE_SELECTOR, 0); }
		public List<TypeRuleDefinitionContext> typeRuleDefinition() {
			return getRuleContexts(TypeRuleDefinitionContext.class);
		}
		public TypeRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitTypeRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeRuleContext typeRule() throws RecognitionException {
		TypeRuleContext _localctx = new TypeRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(TYPE_SELECTOR);
			setState(112); match(BLOCK_OPEN);
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113); typeRuleDefinition();
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BODY) | (1L << CONTENT) | (1L << PLURAL) | (1L << FIRST_CHAR) | (1L << PREFIX) | (1L << SEPARATOR))) != 0) );
			setState(118); match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodRuleContext extends ParserRuleContext {
		public MethodRuleDefinitionContext methodRuleDefinition(int i) {
			return getRuleContext(MethodRuleDefinitionContext.class,i);
		}
		public List<MethodRuleDefinitionContext> methodRuleDefinition() {
			return getRuleContexts(MethodRuleDefinitionContext.class);
		}
		public TerminalNode METHOD_SELECTOR() { return getToken(NominalParser.METHOD_SELECTOR, 0); }
		public MethodRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitMethodRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodRuleContext methodRule() throws RecognitionException {
		MethodRuleContext _localctx = new MethodRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_methodRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(METHOD_SELECTOR);
			setState(121); match(BLOCK_OPEN);
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122); methodRuleDefinition();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BODY) | (1L << CONTENT) | (1L << PLURAL) | (1L << FIRST_CHAR) | (1L << PREFIX) | (1L << SEPARATOR))) != 0) );
			setState(127); match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceRuleContext extends ParserRuleContext {
		public ReferenceRuleDefinitionContext referenceRuleDefinition(int i) {
			return getRuleContext(ReferenceRuleDefinitionContext.class,i);
		}
		public List<ReferenceRuleDefinitionContext> referenceRuleDefinition() {
			return getRuleContexts(ReferenceRuleDefinitionContext.class);
		}
		public TerminalNode REFERENCE_SELECTOR() { return getToken(NominalParser.REFERENCE_SELECTOR, 0); }
		public ReferenceRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referenceRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitReferenceRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferenceRuleContext referenceRule() throws RecognitionException {
		ReferenceRuleContext _localctx = new ReferenceRuleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_referenceRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(REFERENCE_SELECTOR);
			setState(130); match(BLOCK_OPEN);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131); referenceRuleDefinition();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BODY) | (1L << CONTENT) | (1L << PLURAL) | (1L << FIRST_CHAR) | (1L << PREFIX) | (1L << SEPARATOR))) != 0) );
			setState(136); match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelRuleContext extends ParserRuleContext {
		public List<LabelRuleDefinitionContext> labelRuleDefinition() {
			return getRuleContexts(LabelRuleDefinitionContext.class);
		}
		public LabelRuleDefinitionContext labelRuleDefinition(int i) {
			return getRuleContext(LabelRuleDefinitionContext.class,i);
		}
		public TerminalNode LABEL_SELECTOR() { return getToken(NominalParser.LABEL_SELECTOR, 0); }
		public LabelRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitLabelRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelRuleContext labelRule() throws RecognitionException {
		LabelRuleContext _localctx = new LabelRuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_labelRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(LABEL_SELECTOR);
			setState(139); match(BLOCK_OPEN);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140); labelRuleDefinition();
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BODY) | (1L << CONTENT) | (1L << FIRST_CHAR) | (1L << PREFIX) | (1L << SEPARATOR))) != 0) );
			setState(145); match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeRuleDefinitionContext extends ParserRuleContext {
		public PluralDefinitionContext pluralDefinition() {
			return getRuleContext(PluralDefinitionContext.class,0);
		}
		public TypographyDefinitionContext typographyDefinition() {
			return getRuleContext(TypographyDefinitionContext.class,0);
		}
		public TypeContentDefinitionContext typeContentDefinition() {
			return getRuleContext(TypeContentDefinitionContext.class,0);
		}
		public TypeRuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRuleDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitTypeRuleDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeRuleDefinitionContext typeRuleDefinition() throws RecognitionException {
		TypeRuleDefinitionContext _localctx = new TypeRuleDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeRuleDefinition);
		try {
			setState(150);
			switch (_input.LA(1)) {
			case BODY:
			case FIRST_CHAR:
			case PREFIX:
			case SEPARATOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(147); typographyDefinition();
				}
				break;
			case PLURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(148); pluralDefinition();
				}
				break;
			case CONTENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(149); typeContentDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodRuleDefinitionContext extends ParserRuleContext {
		public PluralDefinitionContext pluralDefinition() {
			return getRuleContext(PluralDefinitionContext.class,0);
		}
		public TypographyDefinitionContext typographyDefinition() {
			return getRuleContext(TypographyDefinitionContext.class,0);
		}
		public MethodContentDefinitionContext methodContentDefinition() {
			return getRuleContext(MethodContentDefinitionContext.class,0);
		}
		public MethodRuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodRuleDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitMethodRuleDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodRuleDefinitionContext methodRuleDefinition() throws RecognitionException {
		MethodRuleDefinitionContext _localctx = new MethodRuleDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodRuleDefinition);
		try {
			setState(155);
			switch (_input.LA(1)) {
			case BODY:
			case FIRST_CHAR:
			case PREFIX:
			case SEPARATOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(152); typographyDefinition();
				}
				break;
			case PLURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(153); pluralDefinition();
				}
				break;
			case CONTENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(154); methodContentDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceRuleDefinitionContext extends ParserRuleContext {
		public PluralDefinitionContext pluralDefinition() {
			return getRuleContext(PluralDefinitionContext.class,0);
		}
		public TypographyDefinitionContext typographyDefinition() {
			return getRuleContext(TypographyDefinitionContext.class,0);
		}
		public ReferenceContentDefinitionContext referenceContentDefinition() {
			return getRuleContext(ReferenceContentDefinitionContext.class,0);
		}
		public ReferenceRuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referenceRuleDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NominalVisitor ) return ((NominalVisitor<? extends T>)visitor).visitReferenceRuleDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
